# simulation-and-keyframing

./: CMakeLists.txt  run.sh
examples/: boner.cpp  cloth.cpp  cloth_pbd.cpp  collision.cpp  cylinder.cpp  skeleton.cpp  temp.cpp
src/: bone.hpp  camera.cpp  cloth.cpp  cloth.hpp  cloth_point.hpp  example.cpp  obstacles.cpp  obstacles.hpp  simulation.cpp
